@@ -95,7 +95,7 @@ abstract class ImageVisitor {
     NUM_SNAPSHOT_DIR_DIFF,
     SNAPSHOT_DIR_DIFFS,
     SNAPSHOT_DIR_DIFF,
-    SNAPSHOT_DIFF_SNAPSHOTROOT,
+    SNAPSHOT_DIFF_SNAPSHOTID,
     SNAPSHOT_DIR_DIFF_CHILDREN_SIZE,
     SNAPSHOT_DIFF_SNAPSHOTINODE,
     SNAPSHOT_DIR_DIFF_CREATEDLIST,
