@@ -829,6 +829,9 @@ Release 2.1.0-beta - UNRELEASED
     HDFS-4826. TestNestedSnapshots times out due to repeated slow edit log
     flushes when running on virtualized disk.  (Chris Nauroth via szetszwo)
 
+    HDFS-4850. Fix OfflineImageViewer to work on fsimages with empty files or 
+    snapshots. (jing9) 
+
 Release 2.0.5-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
